--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 <meta charset='latin1'>
 <title>RobiNet</title>
  <link rel="stylesheet" href="style.css" type="text/css" />
-
  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-
  <!-- google analytics -->
  <script type="text/javascript">
   var _gaq = _gaq || [];
@@ -36,7 +34,7 @@
    <a href="packets.html" id="packets_link">Packets</a>
    <a href="hosts.html" id="hosts_link">Fake Hosts</a>
    <a href="nets.html" id="nets_link">Fake Networks</a>
-   <a href="scenarii.html" id="scenarii_link">Scneriarii</a>
+   <a href="scenarii.html" id="scenarii_link">Scenarii</a>
    <a href="metrics.html" id="metrics_link">Metrics</a>
   </div>
  <div class="short">
